libs/bng/test/negative/N0222_rxn_component_used_only_on_one_side_no_state_imbalance.bngl
# FAIL
# OUTPUT: error: Molecule created in reaction rule: Component(s) p missing from molecule A(a!1). Reported for reaction in the forward direction.
# OUTPUT: error: Molecule used as pattern in reaction rule: Component(s) p missing from molecule A(a!1). Reported for reaction in the reverse direction.

# NOTE: BNG2.pl reports Molecule created in reaction rule: Component(s) p missing from molecule A(a!1)

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a,p) + A(a,p) <-> A(a!1,p).A(a!1) kp, km
end reaction rules
